[gd_scene load_steps=7 format=3 uid="uid://b8s77ar81hq22"]

[ext_resource type="Texture2D" uid="uid://ct8k56cn1nvl8" path="res://example/ui/UILandingGear/lgear_up.png" id="1"]
[ext_resource type="Texture2D" uid="uid://btekexp2jh7kq" path="res://example/ui/panel_bg9.png" id="2"]
[ext_resource type="Texture2D" uid="uid://hx1cqhset1p1" path="res://example/ui/UILandingGear/lgear_down.png" id="3"]
[ext_resource type="Texture2D" uid="uid://doj1lfwvklqht" path="res://example/ui/UILandingGear/lgear_stowing.png" id="4"]
[ext_resource type="Texture2D" uid="uid://bj75hc85ajy6l" path="res://example/ui/UILandingGear/lgear_deploying.png" id="5"]
[ext_resource type="Script" path="res://example/ui/UILandingGear/UILandingGear.gd" id="6"]

[node name="UILandingGear" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 110.0
offset_bottom = 128.0
script = ExtResource("6")

[node name="Panel" type="NinePatchRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2")
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
anchor_right = 1.0
offset_left = 10.0
offset_top = 5.0
offset_right = -10.0
offset_bottom = 19.0
theme_override_font_sizes/font_size = 10
text = "Landing Gear"
horizontal_alignment = 1

[node name="GearUp" type="TextureRect" parent="Panel"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -24.0
offset_right = 32.0
offset_bottom = 40.0
texture = ExtResource("1")

[node name="GearDown" type="TextureRect" parent="Panel"]
visible = false
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -24.0
offset_right = 32.0
offset_bottom = 40.0
texture = ExtResource("3")

[node name="GearStowing" type="TextureRect" parent="Panel"]
visible = false
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -24.0
offset_right = 32.0
offset_bottom = 40.0
texture = ExtResource("4")

[node name="GearDeploying" type="TextureRect" parent="Panel"]
visible = false
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -24.0
offset_right = 32.0
offset_bottom = 40.0
texture = ExtResource("5")
